Contact page updated

--- a/css/main.css
+++ b/css/main.css
@@ -3244,6 +3244,10 @@ form .inputs-description {
   top: 5%;
   border: solid 10px #f9f9fa;
   border-radius: 5%;
+  padding: 20px;
+}
+.google-map iframe {
+  border-radius: 5%;
 }
 
 @media only screen and (min-width: 1200px) {
