--- a/css/main.css
+++ b/css/main.css
@@ -207,6 +207,49 @@ img {
   height: auto;
 }
 
+.sponsors-container {
+  position: absolute;
+  right: 2%;
+  top: 5%;
+  width: 45%;
+  height: 90%;
+  border: 5px solid #fefefe;
+  border-radius: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 12px;
+  column-gap: 12px;
+  overflow-y: scroll;
+  padding: 12px;
+}
+.sponsor-card {
+  background-color: aqua;
+  border: 5px solid red;
+  height: 200px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.sponsor-card:nth-child(1) {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  height: 300px;
+}
+.sponsor-card img {
+  width: 150px;
+}
+.sponsor-name {
+  font-size: 3rem;
+  font-weight: bold;
+  color: #fefefe;
+}
+.sponsor-title {
+  font-size: 2rem;
+  color: #b3b6bc;
+}
 @media only screen and (min-width: 1200px) {
   .fullheight {
     position: relative;
