Responsiveness initial commit

--- a/css/main.css
+++ b/css/main.css
@@ -206,13 +206,15 @@ img {
   position: static;
   height: auto;
 }
-
+.sponsors-section {
+  border-left: 4px solid #fefefe;
+}
 .sponsors-container {
   position: absolute;
   right: 2%;
-  top: 5%;
-  width: 50%;
-  height: 90%;
+  /* top: 5%; */
+  width: 100%;
+  height: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
   row-gap: 12px;
@@ -220,7 +222,6 @@ img {
   overflow-y: scroll;
   padding-right: 15px;
   padding-left: 40px;
-  border-left: 4px solid #fefefe;
 }
 ::-webkit-scrollbar {
   width: 8px;
@@ -3319,10 +3320,11 @@ form .inputs-description {
 }
 
 .google-map {
-  width: 90%;
+  width: 95%;
   height: 90%;
   position: absolute;
   top: 5%;
+  left: 2%;
   background: #f9f9fa;
 }
 .google-map iframe {
