--- a/css/main.css
+++ b/css/main.css
@@ -177,6 +177,37 @@ body {
   background-color: #061125;
   color: #ffffff;
 }
+.aboutUS{
+color: #ffffff;
+    background: -webkit-linear-gradient(
+0deg, #fc466b 0%, #00dbde 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    display: inline-block;
+    position: relative;
+    font: normal 500 4.8rem/1 "Oswald", serif;
+    text-transform: uppercase;
+}
+
+.consert{
+background: linear-gradient(90deg, #001E30 0%, rgba(0, 30, 48, 0) 99.98%), url(img/effe/images/capture3.gif);
+}
+
+
+
+
+.pic{
+  width: 600px;
+  height:620px;
+}
+
+
+p.para{
+  color: #ffffff;
+  font-size: 15px;
+  padding-left: 120px;
+}
 
 section {
   position: relative;
