--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,12 @@
   background-image: url("../img/menu/menu-6.jpg");
 }
 
+@media screen and (max-width: 600px){
+  .media-object:nth-of-type(3),  .media-object:nth-of-type(4),  .media-object:nth-of-type(5){
+    display: none;
+  }
+}
+
 /* ------------------------------------------------*/
 /* Template Backgrounds End */
 /* ------------------------------------------------*/
@@ -174,9 +180,66 @@ body {
   min-width: 320px;
   overflow-x: hidden !important;
   font: normal 400 1.6rem/1.6 "Roboto", serif;
+  /* background-image: linear-gradient(
+      285deg,
+      rgba(57, 57, 57, 0.04) 0%,
+      rgba(57, 57, 57, 0.04) 25%,
+      rgba(126, 126, 126, 0.04) 25%,
+      rgba(126, 126, 126, 0.04) 50%,
+      rgba(80, 80, 80, 0.04) 50%,
+      rgba(80, 80, 80, 0.04) 75%,
+      rgba(117, 117, 117, 0.04) 75%,
+      rgba(117, 117, 117, 0.04) 100%
+    ),
+    linear-gradient(
+      333deg,
+      rgba(26, 26, 26, 0.04) 0%,
+      rgba(26, 26, 26, 0.04) 25%,
+      rgba(154, 154, 154, 0.04) 25%,
+      rgba(154, 154, 154, 0.04) 50%,
+      rgba(218, 218, 218, 0.04) 50%,
+      rgba(218, 218, 218, 0.04) 75%,
+      rgba(91, 91, 91, 0.04) 75%,
+      rgba(91, 91, 91, 0.04) 100%
+    ),
+    linear-gradient(
+      45deg,
+      rgba(14, 14, 14, 0.04) 0%,
+      rgba(14, 14, 14, 0.04) 25%,
+      rgba(216, 216, 216, 0.04) 25%,
+      rgba(216, 216, 216, 0.04) 50%,
+      rgba(44, 44, 44, 0.04) 50%,
+      rgba(44, 44, 44, 0.04) 75%,
+      rgba(111, 111, 111, 0.04) 75%,
+      rgba(111, 111, 111, 0.04) 100%
+    ),
+    linear-gradient(
+      251deg,
+      rgba(27, 27, 27, 0.04) 0%,
+      rgba(27, 27, 27, 0.04) 25%,
+      rgba(107, 107, 107, 0.04) 25%,
+      rgba(107, 107, 107, 0.04) 50%,
+      rgba(167, 167, 167, 0.04) 50%,
+      rgba(167, 167, 167, 0.04) 75%,
+      rgba(34, 34, 34, 0.04) 75%,
+      rgba(34, 34, 34, 0.04) 100%
+    ),
+    linear-gradient(
+      63deg,
+      rgba(114, 114, 114, 0.04) 0%,
+      rgba(114, 114, 114, 0.04) 25%,
+      rgba(16, 16, 16, 0.04) 25%,
+      rgba(16, 16, 16, 0.04) 50%,
+      rgba(190, 190, 190, 0.04) 50%,
+      rgba(190, 190, 190, 0.04) 75%,
+      rgba(159, 159, 159, 0.04) 75%,
+      rgba(159, 159, 159, 0.04) 100%
+    ),
+    linear-gradient(90deg, rgb(44, 69, 142), rgb(133, 17, 234));
+  color: #ffffff; */
   background-color: #061125;
-  color: #ffffff;
 }
+
 .aboutUS{
 color: #ffffff;
     background: -webkit-linear-gradient(
@@ -189,13 +252,6 @@ color: #ffffff;
     font: normal 500 4.8rem/1 "Oswald", serif;
     text-transform: uppercase;
 }
-
-.consert{
-background: linear-gradient(90deg, #001E30 0%, rgba(0, 30, 48, 0) 99.98%), url(img/effe/images/capture3.gif);
-}
-
-
-
 
 .pic{
   width: 600px;
@@ -213,7 +269,12 @@ section {
   position: relative;
   min-width: 320px;
 }
-
+.text {
+  font-size: 300px;
+  color: yellow;
+  width: 50%;
+  margin: auto;
+}
 a {
   text-decoration: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -237,14 +298,12 @@ img {
   position: static;
   height: auto;
 }
+
+
 .sponsors-section {
   border-left: 4px solid #fefefe;
 }
-@media screen and (max-width: 1200px) {
-  .sponsors-section {
-    border-left: 0px solid #fefefe;
-  }
-}
+
 .sponsors-container {
   position: absolute;
   right: 5%;
@@ -254,7 +313,7 @@ img {
   display: grid;
   grid-template-columns: 1fr 1fr;
   row-gap: 12px;
-  column-gap: 12px;
+  column-gap: 15%;
   overflow-y: scroll;
   padding-right: 15px;
   padding-left: 40px;
@@ -267,6 +326,7 @@ img {
   background-color: #fefefe;
   border-radius: 10px;
 }
+
 .sponsor-card {
   height: 280px;
   width: 100%;
@@ -274,12 +334,16 @@ img {
   grid-template-rows: 120px 60px 40px;
   margin-bottom: 30px;
   border-radius: 10%;
+  
 }
 
 .sponsor-card:nth-child(1) {
   grid-column-start: 1;
   grid-column-end: 3;
   height: 280px;
+  width: 17.5vw;
+  margin-left: 50%;
+  transform: translateX(-50%);
 }
 .sponsor-card img {
   width: 130px;
@@ -309,14 +373,76 @@ img {
   text-align: center;
   /* background-color: green; */
 }
-@media screen and (max-width: 512px) {
+@media screen and (max-width: 450px){
+  .sponsor-card:nth-child(1){
+    width: 70vw;
+    margin-left: 0vw;
+    transform: none;
+   }
+   .sponsor-card{
+     width:70vw;
+   }
+   .sponsors-section{
+     border-left: none;
+   }
+   .sponsors-container {
+    display:flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  /* h1{
+    font-size:10vw;
+  } */
+}
+@media screen and (max-width: 600px) and (min-width:451px) {
   .sponsor-name {
     font-size: 2.2rem;
   }
   .sponsor-title {
     font-size: 1.2rem;
   }
+  .sponsor-card:nth-child(1){
+    width: 50vw;
+    margin-left: 0vw;
+    transform: none;
+   }
+   .sponsor-card{
+     width:50vw;
+   }
+   .sponsors-container {
+     display:flex;
+     align-items: center;
+     flex-direction: column;
+   }
+   
+   .sponsors-section{
+    border-left: none;
+  }
 }
+
+@media screen and (max-width: 1200px) and (min-width: 601px) {
+  .sponsor-name {
+    font-size: 2.2rem;
+  }
+  .sponsor-title {
+    font-size: 1.2rem;
+  }
+  .sponsor-card:nth-child(1){
+   width: 30vw;
+  }
+  .sponsor-card{
+    width:30vw;
+  }
+  .sponsors-container {
+    padding-right: 5%;
+    padding-left: 5%;
+  }
+  
+  .sponsors-section{
+    border-left: none;
+  }
+}
+
 
 @media only screen and (min-width: 1200px) {
   .fullheight {
@@ -324,7 +450,6 @@ img {
     height: 100%;
   }
 }
-
 .fullheight-mobile {
   position: relative;
   height: 100%;
@@ -638,7 +763,11 @@ h1 span.gradient-text {
 h1.large {
   font-size: 4.8rem;
 }
-
+@media only screen and (max-width: 430px){
+  h1{
+    font-size: 3.9rem;
+  }
+}
 @media only screen and (min-width: 768px) {
   h1 {
     font-size: 6rem;
@@ -1371,9 +1500,6 @@ form .inputs-description {
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
-.header.transparent {
-  background-color: #061125;
-}
 
 .header .logo {
   position: absolute;
@@ -1385,7 +1511,7 @@ form .inputs-description {
 
 .header .logo img {
   display: block;
-  width: auto;
+  width: 60px;
   height: auto;
   position: absolute;
   left: 50%;
@@ -1435,7 +1561,62 @@ form .inputs-description {
 .main-section {
   position: relative;
   padding-top: 100px;
-  background-color: #061125;
+  /* background-image: linear-gradient(
+      285deg,
+      rgba(57, 57, 57, 0.04) 0%,
+      rgba(57, 57, 57, 0.04) 25%,
+      rgba(126, 126, 126, 0.04) 25%,
+      rgba(126, 126, 126, 0.04) 50%,
+      rgba(80, 80, 80, 0.04) 50%,
+      rgba(80, 80, 80, 0.04) 75%,
+      rgba(117, 117, 117, 0.04) 75%,
+      rgba(117, 117, 117, 0.04) 100%
+    ),
+    linear-gradient(
+      333deg,
+      rgba(26, 26, 26, 0.04) 0%,
+      rgba(26, 26, 26, 0.04) 25%,
+      rgba(154, 154, 154, 0.04) 25%,
+      rgba(154, 154, 154, 0.04) 50%,
+      rgba(218, 218, 218, 0.04) 50%,
+      rgba(218, 218, 218, 0.04) 75%,
+      rgba(91, 91, 91, 0.04) 75%,
+      rgba(91, 91, 91, 0.04) 100%
+    ),
+    linear-gradient(
+      45deg,
+      rgba(14, 14, 14, 0.04) 0%,
+      rgba(14, 14, 14, 0.04) 25%,
+      rgba(216, 216, 216, 0.04) 25%,
+      rgba(216, 216, 216, 0.04) 50%,
+      rgba(44, 44, 44, 0.04) 50%,
+      rgba(44, 44, 44, 0.04) 75%,
+      rgba(111, 111, 111, 0.04) 75%,
+      rgba(111, 111, 111, 0.04) 100%
+    ),
+    linear-gradient(
+      251deg,
+      rgba(27, 27, 27, 0.04) 0%,
+      rgba(27, 27, 27, 0.04) 25%,
+      rgba(107, 107, 107, 0.04) 25%,
+      rgba(107, 107, 107, 0.04) 50%,
+      rgba(167, 167, 167, 0.04) 50%,
+      rgba(167, 167, 167, 0.04) 75%,
+      rgba(34, 34, 34, 0.04) 75%,
+      rgba(34, 34, 34, 0.04) 100%
+    ),
+    linear-gradient(
+      63deg,
+      rgba(114, 114, 114, 0.04) 0%,
+      rgba(114, 114, 114, 0.04) 25%,
+      rgba(16, 16, 16, 0.04) 25%,
+      rgba(16, 16, 16, 0.04) 50%,
+      rgba(190, 190, 190, 0.04) 50%,
+      rgba(190, 190, 190, 0.04) 75%,
+      rgba(159, 159, 159, 0.04) 75%,
+      rgba(159, 159, 159, 0.04) 100%
+    ),
+    linear-gradient(90deg, rgb(44, 69, 142), rgb(133, 17, 234)); */
 }
 
 .main-section.transparent {
@@ -1703,7 +1884,62 @@ form .inputs-description {
   width: 100%;
   height: 100%;
   padding-top: 100px;
-  background-color: #061125;
+  /* background-image: linear-gradient(
+      285deg,
+      rgba(57, 57, 57, 0.04) 0%,
+      rgba(57, 57, 57, 0.04) 25%,
+      rgba(126, 126, 126, 0.04) 25%,
+      rgba(126, 126, 126, 0.04) 50%,
+      rgba(80, 80, 80, 0.04) 50%,
+      rgba(80, 80, 80, 0.04) 75%,
+      rgba(117, 117, 117, 0.04) 75%,
+      rgba(117, 117, 117, 0.04) 100%
+    ),
+    linear-gradient(
+      333deg,
+      rgba(26, 26, 26, 0.04) 0%,
+      rgba(26, 26, 26, 0.04) 25%,
+      rgba(154, 154, 154, 0.04) 25%,
+      rgba(154, 154, 154, 0.04) 50%,
+      rgba(218, 218, 218, 0.04) 50%,
+      rgba(218, 218, 218, 0.04) 75%,
+      rgba(91, 91, 91, 0.04) 75%,
+      rgba(91, 91, 91, 0.04) 100%
+    ),
+    linear-gradient(
+      45deg,
+      rgba(14, 14, 14, 0.04) 0%,
+      rgba(14, 14, 14, 0.04) 25%,
+      rgba(216, 216, 216, 0.04) 25%,
+      rgba(216, 216, 216, 0.04) 50%,
+      rgba(44, 44, 44, 0.04) 50%,
+      rgba(44, 44, 44, 0.04) 75%,
+      rgba(111, 111, 111, 0.04) 75%,
+      rgba(111, 111, 111, 0.04) 100%
+    ),
+    linear-gradient(
+      251deg,
+      rgba(27, 27, 27, 0.04) 0%,
+      rgba(27, 27, 27, 0.04) 25%,
+      rgba(107, 107, 107, 0.04) 25%,
+      rgba(107, 107, 107, 0.04) 50%,
+      rgba(167, 167, 167, 0.04) 50%,
+      rgba(167, 167, 167, 0.04) 75%,
+      rgba(34, 34, 34, 0.04) 75%,
+      rgba(34, 34, 34, 0.04) 100%
+    ),
+    linear-gradient(
+      63deg,
+      rgba(114, 114, 114, 0.04) 0%,
+      rgba(114, 114, 114, 0.04) 25%,
+      rgba(16, 16, 16, 0.04) 25%,
+      rgba(16, 16, 16, 0.04) 50%,
+      rgba(190, 190, 190, 0.04) 50%,
+      rgba(190, 190, 190, 0.04) 75%,
+      rgba(159, 159, 159, 0.04) 75%,
+      rgba(159, 159, 159, 0.04) 100%
+    ),
+    linear-gradient(90deg, rgb(44, 69, 142), rgb(133, 17, 234)); */
   overflow-y: auto;
   opacity: 0;
   visibility: hidden;
@@ -2443,7 +2679,6 @@ form .inputs-description {
   height: 100%;
   padding: 100px 0;
   overflow-y: auto;
-  background-color: #061125;
   z-index: 10;
   opacity: 0;
   visibility: hidden;
@@ -2593,7 +2828,7 @@ form .inputs-description {
   height: 100%;
   padding: 100px 0;
   overflow-y: auto;
-  background-color: #061125;
+
   z-index: 10;
   opacity: 0;
   visibility: hidden;
@@ -2847,7 +3082,7 @@ form .inputs-description {
   width: 100%;
   height: auto;
   padding-top: 100px;
-  background-color: #061125;
+
   overflow-y: auto;
   z-index: 3;
 }
